[gd_scene load_steps=69 format=2]

[ext_resource path="res://addons/mixing-desk/sound/nonspatial/ran_cont.gd" type="Script" id=1]
[ext_resource path="res://src/playerCharController.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/mario/sounds/Jump1.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/actors/mario/mario.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/mario/sounds/Jump4.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/actors/mario/sounds/Jump2.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/actors/mario/sounds/Dive1.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/actors/mario/sounds/Jump3.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/actors/mario/sounds/Dive2.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/actors/mario/sounds/TripleJump2.wav" type="AudioStream" id=10]
[ext_resource path="res://scenes/actors/mario/sounds/Fall.wav" type="AudioStream" id=11]
[ext_resource path="res://scenes/actors/mario/sounds/TripleJump1.wav" type="AudioStream" id=12]
[ext_resource path="res://scenes/actors/mario/sounds/DoubleJump2.wav" type="AudioStream" id=13]
[ext_resource path="res://scenes/actors/mario/sounds/TripleJump3.wav" type="AudioStream" id=14]
[ext_resource path="res://scenes/actors/mario/sounds/DoubleJump3.wav" type="AudioStream" id=15]
[ext_resource path="res://scenes/actors/mario/sounds/DoubleJump1.wav" type="AudioStream" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 15 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 240, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 144, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 240, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 624, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 48, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 96, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 144, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 192, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 240, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 288, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 336, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 576, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 192, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 240, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 288, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 336, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 384, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 432, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 480, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 528, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 192, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 240, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 288, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 336, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 384, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 432, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 480, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 528, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 0, 480, 48, 48 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 0, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 96, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 192, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 192, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 0, 432, 48, 48 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 48, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 0, 528, 48, 48 )

[sub_resource type="SpriteFrames" id=52]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "doubleJumpRight",
"speed": 0.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "tripleJumpRight",
"speed": 0.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": false,
"name": "doubleJumpLeft",
"speed": 0.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "tripleJumpLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "bonkedLeft",
"speed": 0.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "spinning",
"speed": 20.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": false,
"name": "bonkedRight",
"speed": 0.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "movingRight",
"speed": 18.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "movingLeft",
"speed": 18.0
}, {
"frames": [ SubResource( 40 ) ],
"loop": true,
"name": "wallSlideRight",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ) ],
"loop": false,
"name": "diveRight",
"speed": 0.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": false,
"name": "fallLeft",
"speed": 0.0
}, {
"frames": [ SubResource( 43 ) ],
"loop": false,
"name": "doubleFallLeft",
"speed": 0.0
}, {
"frames": [ SubResource( 44 ) ],
"loop": false,
"name": "doubleFallRight",
"speed": 0.0
}, {
"frames": [ SubResource( 45 ) ],
"loop": false,
"name": "fallRight",
"speed": 0.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": false,
"name": "diveLeft",
"speed": 0.0
}, {
"frames": [ SubResource( 47 ) ],
"loop": false,
"name": "idleRight",
"speed": 0.0
}, {
"frames": [ SubResource( 48 ) ],
"loop": false,
"name": "jumpRight",
"speed": 12.0
}, {
"frames": [ SubResource( 49 ) ],
"loop": false,
"name": "idleLeft",
"speed": 0.0
}, {
"frames": [ SubResource( 50 ) ],
"loop": false,
"name": "jumpLeft",
"speed": 12.0
}, {
"frames": [ SubResource( 51 ) ],
"loop": true,
"name": "wallSlideLeft",
"speed": 5.0
} ]

[node name="Mario" type="KinematicBody2D"]
position = Vector2( 32.5, 128 )
script = ExtResource( 2 )
deceleration = 15.0
friction = 7.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 8 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 52 )
animation = "fallRight"
playing = true

[node name="JumpSoundPlayer" type="Node" parent="."]
script = ExtResource( 1 )
sound_number = 1

[node name="Jump1" type="AudioStreamPlayer" parent="JumpSoundPlayer"]
stream = ExtResource( 3 )

[node name="Jump2" type="AudioStreamPlayer" parent="JumpSoundPlayer"]
stream = ExtResource( 6 )

[node name="Jump3" type="AudioStreamPlayer" parent="JumpSoundPlayer"]
stream = ExtResource( 8 )

[node name="Jump4" type="AudioStreamPlayer" parent="JumpSoundPlayer"]
stream = ExtResource( 5 )

[node name="DoubleJumpSoundPlayer" type="Node" parent="."]
script = ExtResource( 1 )
sound_number = 1

[node name="DoubleJump1" type="AudioStreamPlayer" parent="DoubleJumpSoundPlayer"]
stream = ExtResource( 16 )

[node name="DoubleJump2" type="AudioStreamPlayer" parent="DoubleJumpSoundPlayer"]
stream = ExtResource( 13 )

[node name="DoubleJump3" type="AudioStreamPlayer" parent="DoubleJumpSoundPlayer"]
stream = ExtResource( 15 )

[node name="TripleJumpSoundPlayer" type="Node" parent="."]
script = ExtResource( 1 )
sound_number = 1

[node name="TripleJump1" type="AudioStreamPlayer" parent="TripleJumpSoundPlayer"]
stream = ExtResource( 12 )

[node name="TripleJump2" type="AudioStreamPlayer" parent="TripleJumpSoundPlayer"]
stream = ExtResource( 10 )

[node name="TripleJump3" type="AudioStreamPlayer" parent="TripleJumpSoundPlayer"]
stream = ExtResource( 14 )

[node name="DiveSoundPlayer" type="Node" parent="."]
script = ExtResource( 1 )
sound_number = 1

[node name="Dive1" type="AudioStreamPlayer" parent="DiveSoundPlayer"]
stream = ExtResource( 7 )

[node name="Dive2" type="AudioStreamPlayer" parent="DiveSoundPlayer"]
stream = ExtResource( 9 )

[node name="FallSoundPlayer" type="Node" parent="."]
script = ExtResource( 1 )
sound_number = 1

[node name="Fall1" type="AudioStreamPlayer" parent="FallSoundPlayer"]
stream = ExtResource( 11 )
